--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cloudinary": "^1.40.0",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
     "dotenv": "^16.3.1",
@@ -19,6 +20,7 @@
     "mongodb": "^5.7.0",
     "mongoose": "^6.9.2",
     "morgan": "1.10.0",
+    "multer": "^1.4.5-lts.1",
     "swagger-ui-express": "^5.0.0",
     "uuid": "^9.0.0"
   },
