--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,12 @@ SECRET_KEY=
 CLOUDINARY_NAME=
 CLOUDINARY_KEY=
 CLOUDINARY_SECRET=
+
+# google authentication (google cloud console)
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
+BASE_URL_ONRENDER=
+BASE_URL_LOCAL=
+
+FRONTEND_GH_PAGE_URL=
